--- a/recepti.html
+++ b/recepti.html
@@ -7,6 +7,7 @@
 </head>
 <body bgcolor="C85635">
 <font color="#FFFFFF">
+<h1><strong>ГРИШАК ПРИВЕТ</strong></h>
 <h1><strong>Рецепты украинской кухни </strong></h1>
 <h1>Рецепт борща</h1>
 <p>  
